<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.med.com.drawing.GameMainActivity"
    android:id="@+id/activity_main"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/playBtn"
        android:fontFamily="@font/buttonfont"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50dp" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="200dp"
        android:layout_height="71dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/playBtn"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:fontFamily="@font/buttonfont"
        android:shadowColor="#000000"
        android:shadowDx="-5"
        android:shadowDy="+2"
        android:shadowRadius="5"
        android:onClick="play" />

    <Button
        android:id="@+id/settingBtn"
        android:layout_width="200dp"
        android:layout_height="71dp"
        android:layout_alignLeft="@+id/playBtn"
        android:layout_alignStart="@+id/playBtn"
        android:layout_below="@+id/playBtn"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/buttonfont"
        android:onClick="settings"
        android:shadowColor="#000000"
        android:shadowDx="-5"
        android:shadowDy="+2"
        android:shadowRadius="5"
        android:text="@string/settingTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/musicBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/music_on"/>

</RelativeLayout>
